--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teclib/android-inventory-agent",
-  "version": "1.3.0",
+  "version": "1.0.0-rc.0",
   "description": "Flyve MDM Inventory Agent for Android",
   "main": "index.js",
   "scripts": {
