--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile "org.mockito:mockito-core:+"
-    androidTestCompile "org.mockito:mockito-android:+"
+    testImplementation 'org.mockito:mockito-core:2.9.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
 
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
