--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,25 @@ jobs:
           name: Run Tests on Firebase test lab
           command: source ci/scripts/google_cloud.sh
 
+  check_transifex:
+    <<: *android_config
+    steps:
+      - checkout
+      - *validate_running
+      - *restore_gradle_cache
+      - *ruby_dependencies
+      - *android_dependencies
+      - *save_gradle_cache
+      - run:
+          name: Setup environment
+          command: source ci/scripts/setup_environment.sh
+      - run:
+          name: Pull transifex
+          command: tx pull --all --force
+      - run:
+          name: Create debug apk
+          command: ./gradlew assemble
+
   deploy_beta:
     <<: *android_config
     steps:
@@ -191,6 +210,16 @@ workflows:
     jobs:
       - build:
           context: org-global
+      - check_transifex:
+          context: org-global
+          requires:
+            - build
+          filters:
+            branches:
+              ignore:
+                - master
+                - develop
+                - /^release/.*/
       - test_instrumentation:
           context: org-global
           requires:
