--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
     <application
         android:name=".ui.InventoryAgentApp"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@drawable/ic_launcher_round"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:vmSafeMode="true">
@@ -53,18 +54,18 @@
         </activity>
         <activity
             android:name=".ui.ActivityMain"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".preference.InventoryParametersPreference"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".preference.GlobalParametersPreference"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".ui.ActivityInventoryReport"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:theme="@style/NoActionBar"></activity>
+            android:theme="@style/NoActionBar" />
 
         <service
             android:name=".service.InventoryService"
@@ -89,7 +90,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.PermissionActivity"></activity>
+        <activity android:name=".ui.PermissionActivity" />
     </application>
 
 </manifest>
