feat(servers): add button and list server activity
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
         </receiver>
 
         <activity android:name=".ui.PermissionActivity" />
+        <activity android:name=".ui.ActivityListServers" />
     </application>
 
 </manifest>
