--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
 
         <activity android:name=".ui.PermissionActivity" />
         <activity android:name=".ui.ActivityListServers" />
+        <activity android:name=".ui.ActivityDetailServer" />
     </application>
 
 </manifest>
