feat(categories): add views and button
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
         <activity android:name=".ui.PermissionActivity" />
         <activity android:name=".ui.ActivityListServers" />
         <activity android:name=".ui.ActivityDetailServer" />
+        <activity android:name=".ui.ActivityCategories" />
     </application>
 
 </manifest>
