--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,28 +162,6 @@ jobs:
       - run:
           name: Deploy Production
           command: source ci/scripts/deploy_production.sh
-
-  release:
-    <<: *android_config
-    steps:
-      - checkout
-      - *validate_running
-      - *restore_gradle_cache
-      - *ruby_dependencies
-      - *android_dependencies
-      - *save_gradle_cache
-      - run:
-          name: Setup environment
-          command: source ci/scripts/setup_environment.sh
-      - run:
-          name: Update version code
-          command: ./gradlew updateVersionCode
-      - run:
-          name: Update version name
-          command: ./gradlew updateVersionName -P vName=$GIT_TAG
-      - run:
-          name: Generate certified apk
-          command: source ci/scripts/app_certification.sh
       - run:
           name: Create changelog, github release and push
           command: source ci/scripts/release.sh
@@ -219,7 +197,6 @@ workflows:
               ignore:
                 - master
                 - develop
-                - /^release/.*/
       - test_instrumentation:
           context: org-global
           requires:
@@ -251,12 +228,5 @@ workflows:
           filters:
             branches:
               only:
-                - /^release/.*/
-      - release:
-          context: org-global
-          requires:
-            - documentation
-          filters:
-            branches:
-              only:
-                - /^release/.*/
+                - master
+                - develop
