--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,27 @@
 title: android inventory agent
-email: ml-flyvemdm@teclib.com
-twitter: flyvemdm
 baseurl: "/android-inventory-agent"
-url: "http://flyve.org"   
+url: "http://flyve.org"
 image: http://flyve.org/android-inventory-agent/images/logo2.png
+email: ml-flyvemdm@teclib.com
+twitter: https://twitter.com/flyvemdm
+facebook: https://www.facebook.com/FlyveMDM
+googlePlus: https://plus.google.com/collection/c32TsB
+telegram: https://t.me/flyvemdm
+irc: http://webchat.freenode.net/?channels=flyve-mdm
+reddit: https://www.reddit.com/r/FlyveMDM/
 
 # Build settings
 markdown: kramdown
+
+sass:
+  style: compressed
 
 plugins:
   - jekyll-github-metadata
   - jekyll-feed
   - jekyll-sitemap
 
-repository: flyve-mdm/android-inventory-agent
-
-sass:
-    style: compressed
+repository: flyve-mdm/web-mdm-dashboard
 
 prose:
 
