--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,7 @@
 [main]
 host = https://www.transifex.com
 minimum_perc = 80
-lang_map = pt_BR: pt-rBR, ru_RU: ru-rRU, fr_FR: fr-rFR, es_MX: es-rMX, es_ES: es-rES, en_GB: en-rGB, ko_KR: ko-rKR, ar_EG: ar-rEG, cs_CZ: cs-rCZ, he_IL: he-rIL, ar_SA: ar-rSA, ca_ES: ca-rES
+lang_map = pt_BR: pt-rBR, ru_RU: ru-rRU, fr_FR: fr-rFR, es_MX: es-rMX, es_ES: es-rES, en_GB: en-rGB, ko_KR: ko-rKR, ar_EG: ar-rEG, cs_CZ: cs-rCZ, he_IL: he-rIL, ar_SA: ar-rSA, ca_ES: ca-rES, zh_CN: zh-rCN, nl_NL: nl-rNL, fr: fr, gl_ES: gl-rES, de_DE: de-rDE, hi_IN: hi-rIN, hu_Hu: hu-rHU, it_IT: it-rIT, ja: ja, ja_JP: ja-rJP, pl_PL: pl-rPL, es: es, es_AR: es-rAR, th_TH: th-rTH, ur_PK: ur-rPK
 
 [android-inventory-agent.stringsxml-android]
 file_filter = app/src/main/res/values-<lang>/strings.xml
