ci(documentation): add run in master
Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ workflows:
       - documentation:
           context: org-global
           requires:
-            - test_instrumentation
+            - build
           filters:
             branches:
               only:
