ci(enviroment): change name github enviroments
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teclib/android-inventory-agent",
-  "version": "1.0.0",
-  "description": "Flyve MDM Inventory  Agent for Android",
+  "version": "1.0.0-rc.2",
+  "description": "Flyve MDM Inventory Agent for Android",
   "main": "index.js",
   "scripts": {
     "release": "standard-version -t ''"
