--- a/package.json
+++ b/package.json
@@ -29,5 +29,14 @@
     "gh-pages": "^2.0.0",
     "node-github-release": "^0.1.1",
     "standard-version": "^4.2.0"
+  },
+  "dependencies": {
+    "extend": "^3.0.2",
+    "handlebars": "^4.0.14",
+    "https-proxy-agent": "^2.2.0",
+    "lodash": "^4.17.13",
+    "lodash.merge": "^4.6.2",
+    "lodash.template": "^4.5.0",
+    "mem": "^4.0.0"
   }
 }
