--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,7 +1,6 @@
-#
-about.version=0.0.0
-about.build=1
-about.date=Tue Jul 11 21:58:40 2017
-about.commit=c372bc8
-about.commitFull=c372bc8a81d7592737627c766d19078028bbf2c0
-about.github=https://github.com/flyve-mdm/android-inventory-agent
+about.version=
+about.build=39178
+about.date=mer. nov. 27 17:36:39 2019
+about.commit=
+about.commitFull=
+about.github=https://github.com/glpi-project/android-inventory-agent
