fix(about): retrieve informations from properties
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
-about.version=
+about.version=1.0.0-rc.2
 about.build=39178
-about.date=mer. nov. 27 17:36:39 2019
+about.date=jeu. nov. 28 07:42:05 2019
 about.commit=
 about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
