--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: android inventory agent
 baseurl: "/android-inventory-agent"
-url: "http://glpi-project.github.io"
-image: http://glpi-project.github.io/android-inventory-agent/images/logo2.png
+url: "https://glpi-project.github.io"
+image: https://glpi-project.github.io/android-inventory-agent/images/logo2.png
 email: sales@teclib.com
 twitter: https://twitter.com/glpi_project
 facebook: https://www.facebook.com/glpiproject/
