fix(gh-page): fix url
Signed-off-by: Stanislas <skita@teclib.com>

--- a/_data/whitelist_GP.yml
+++ b/_data/whitelist_GP.yml
@@ -11,7 +11,7 @@
 - deeplink
 - demo-mode
 - docker-environment
-- flyve-mdm.github.io
+- glpi-project.github.io
 - glpi-plugin
 - graphql-service
 - ios-inventory-agent
