--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,7 @@ jobs:
           command: source ci/scripts/setup_environment.sh
       - run:
           name: Update version code
-          command: ./gradlew updateVersionCode -P vVersion=$CIRCLE_BUILD_NUM
+          command: ./gradlew updateVersionCode
       - run:
           name: Generate certified apk
           command: source ci/scripts/app_certification.sh
