fix(inventory): fix http user-agent informations
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39183
-about.date=Thu Nov 28 08:20:53 2019
-about.commit=655d0ef
-about.commitFull=655d0ef4f5ed6a1c70e31c4d15465c01162f6936
+about.date=jeu. nov. 28 10:03:02 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
