ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39183
-about.date=jeu. nov. 28 10:03:02 2019
-about.commit=
-about.commitFull=
+about.build=39185
+about.date=Thu Nov 28 09:24:10 2019
+about.commit=6278055
+about.commitFull=62780557f43abc4827de0a2aed8f7a13e30bbbca
 about.github=https://github.com/glpi-project/android-inventory-agent
