--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         </activity>
         <activity
             android:name="org.glpi.inventory.agent.ui.ActivityMain"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name" />
         <activity
             android:name="org.glpi.inventory.agent.preference.InventoryParametersPreference"
