--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39185
-about.date=jeu. nov. 28 15:16:48 2019
-about.commit=
-about.commitFull=
+about.build=39187
+about.date=Thu Nov 28 14:46:10 2019
+about.commit=d47cd39
+about.commitFull=d47cd39870268259251cfd3012036d1009da7d10
 about.github=https://github.com/glpi-project/android-inventory-agent
