feat(inventory): bump android inventory library from 1.3.6 to 1.4.0
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39187
-about.date=Thu Nov 28 14:46:10 2019
-about.commit=d47cd39
-about.commitFull=d47cd39870268259251cfd3012036d1009da7d10
+about.date=jeu. déc. 05 11:08:43 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
