ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39187
-about.date=jeu. déc. 05 11:08:43 2019
-about.commit=
-about.commitFull=
+about.build=39189
+about.date=Thu Dec 05 10:30:42 2019
+about.commit=54825b6
+about.commitFull=54825b6c2774cf3ba1a5ac4b5d6292fbe7fc8d66
 about.github=https://github.com/glpi-project/android-inventory-agent
