--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39191
-about.date=Tue Dec 10 07:23:19 2019
-about.commit=7f306d5
-about.commitFull=7f306d54b72c2a7088145bbed2aa2246ff186ee6
+about.date=lun. déc. 16 14:33:41 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
