--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -9,7 +10,7 @@ android {
         applicationId "org.glpi.inventory.agent"
         minSdkVersion 16
         targetSdkVersion 28
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     testOptions {
@@ -20,9 +21,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            manifestPlaceholders = [crashlyticsEnabled: true]
         }
         debug {
             testCoverageEnabled true
+            manifestPlaceholders = [crashlyticsEnabled: false]
         }
     }
 
@@ -44,29 +47,35 @@ dependencies {
 
     implementation 'info.hoang8f:fbutton:1.0.5'
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
+        exclude group: 'com.androidx', module: 'support-annotations'
     })
     androidTestImplementation('tools.fastlane:screengrab:1.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.androidx', module: 'support-annotations'
     })
 
     testImplementation 'org.mockito:mockito-core:2.21.0'
     androidTestImplementation 'org.mockito:mockito-android:2.21.0'
 
-    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'org.flyve:inventory:1.4.0@aar'
-    implementation 'com.bugsnag:bugsnag-android:4.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'org.flyve:inventory:1.4.1@aar'
     implementation 'com.orhanobut:logger:2.1.1'
-    implementation 'com.android.support:multidex:1.0.2'
-    implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.preference:preference:1.1.0'
+
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    testImplementation 'junit:junit:4.12'
 }
 
 
@@ -133,3 +142,5 @@ task updateVersionName {
         println "Version name: " + versionName
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
