ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39191
-about.date=lun. déc. 16 14:33:41 2019
-about.commit=
-about.commitFull=
+about.build=39193
+about.date=Mon Dec 16 13:55:12 2019
+about.commit=27b4ba5
+about.commitFull=27b4ba51caa87100e224ef2400d030ccfc3b5567
 about.github=https://github.com/glpi-project/android-inventory-agent
