--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39193
-about.date=Mon Dec 16 13:55:12 2019
-about.commit=27b4ba5
-about.commitFull=27b4ba51caa87100e224ef2400d030ccfc3b5567
+about.date=lun. déc. 16 15:03:21 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
