ci(release): update version on android manifest

--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
-about.build=39193
-about.date=lun. déc. 16 15:03:21 2019
-about.commit=
-about.commitFull=
+about.build=39195
+about.date=Mon Dec 16 14:18:32 2019
+about.commit=4f4b783
+about.commitFull=4f4b78332e6068ff5bf67388fb2e0a803f739af9
 about.github=https://github.com/glpi-project/android-inventory-agent
