--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 about.version=1.0.0-rc.2
 about.build=39197
-about.date=Mon Dec 16 14:46:10 2019
-about.commit=4d454e8
-about.commitFull=4d454e85fb035fd5b20467f8bec9b030da00ee5b
+about.date=lun. déc. 16 16:32:10 2019
+about.commit=
+about.commitFull=
 about.github=https://github.com/glpi-project/android-inventory-agent
